#revision 1290
	ctapmex 01.02.2010 15:12
	1. BaseEditor::idleJobFar перенесен в FarEditor::idleJobFar
	2. отключение раскраски/парсинга файла  через меню, а не кнопкой Ecs

#revision 1289
	ctapmex 31.01.2010 16:32
	1. небольшие изменения

#revision 1288
	ctapmex 31.01.2010 15:00
	1. увеличение скорости работы, засчет удаления лишних ожиданий mutex
	2. добавлена возможность отключения парсинга файла нажатием Esc. срабатывает только в момент парсинга, т.е
		например при большом файле. на мелких врятли получится

#revision 1286
	ctapmex 29.01.2010 17:52
	1. реакция в потоке на события, улучшение стабильности работы

#revision 1285
	ctapmex 29.01.2010 15:20
	1. попытка выделить раскраску  в отдельный поток. первый шаг
	просьба пока не пинать, а лучше если что подсказать.

#revision 1282
	ctapmex 27.01.2010 10:30
	1. косметика вывода данных.
	2. первый замер скорости
		бибилиотека схем от farcolorer 1.0.2.3 , версия бибилиотеки колорера r1278
		проводилась серия тестов, для каждого 5 попыток по 5-50 повторений (в зависимости от скорости работы)

		1 test			2 test			3 test			4 test			5 test (5.reg)	5 test (6.cpp)
		0,000726738	0,028987460	0,000638342	5,262370000	1,930860000			7,241742000


#revision 1281
	ctapmex 25.01.2010 20:50
	1. добавлена пара тестов скорости.
	2. для избавления от влияния кеширования и трудого, первый прогон теста не фиксируем.

#revision 1280
	ctapmex 25.01.2010 17:00
	1. добавлена пара тестов скорости.
	программа создана, для отслеживания влияния изменений внесенных в код на скорость работы. 
  Для объективного тестирования, нужно проверять на одной и той же библиотеке схем

#revision 1279
	ctapmex 25.01.2010 16:20
	1. слито с r1278 
	2. добавлен проект для измерения скорости работы colorer, его составных частей.