@@ -1,3 +1,8 @@
+#revision 1292
+	ctapmex 01.02.2010 21:21
+	1. в BaseEditor::validate исправлено возможное зацикливание
+	2. используя хак фара ускоряем работу плагина в разы. ( получить строку из фара быстрее, перейдя на неё в начале)
+
 #revision 1290
 	ctapmex 01.02.2010 15:12
 	1. BaseEditor::idleJobFar перенесен в FarEditor::idleJobFar
